首页部分完成

--- a/public/back/user.html
+++ b/public/back/user.html
@@ -62,8 +62,10 @@
 </div>
 
 <!-- 主体内容 -->
-<div class="lt_main container-fluid">
-    用户管理
+<div class="lt_main">
+    <div class="container-fluid">
+        用户管理
+    </div>
 </div>
 
 <!-- 退出模态框 -->
