--- a/public/back/first.html
+++ b/public/back/first.html
@@ -62,8 +62,10 @@
 </div>
 
 <!-- 主体内容 -->
-<div class="lt_main container-fluid">
-    一级分类
+<div class="lt_main">
+    <div class="container-fluid">
+        一级分类
+    </div>
 </div>
 
 <!-- 退出模态框 -->
