--- a/public/back/index.html
+++ b/public/back/index.html
@@ -62,8 +62,21 @@
 </div>
 
 <!-- 主体内容 -->
-<div class="lt_main container-fluid">
-    index
+<div class="lt_main">
+    <div class="container-fluid">
+        <!-- 面包屑导航 -->
+        <ol class="breadcrumb">
+            <li><a href="#">管理系统</a></li>
+            <li class="active">首页</li>
+        </ol>
+        <!-- 内容 -->
+        <div class="lt_content">
+            <div class="l_echarts pull-left"></div>
+            <div class="r_echarts pull-right"></div>
+        </div>
+    </div>
+
+
 </div>
 
 <!-- 退出模态框 -->
@@ -89,6 +102,7 @@
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/echarts/echarts.min.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/index.js"></script>
 </body>
