--- a/public/back/product.html
+++ b/public/back/product.html
@@ -61,8 +61,10 @@
 </div>
 
 <!-- 主体内容 -->
-<div class="lt_main container-fluid">
-    商品管理
+<div class="lt_main">
+    <div class="container-fluid">
+        产品
+    </div>
 </div>
 
 <!-- 退出模态框 -->
