--- a/public/back/user.html
+++ b/public/back/user.html
@@ -64,7 +64,29 @@
 <!-- 主体内容 -->
 <div class="lt_main">
     <div class="container-fluid">
-        用户管理
+        <!-- 面包屑导航 -->
+        <ol class="breadcrumb">
+            <li><a href="#">管理系统</a></li>
+            <li class="active">用户管理</li>
+        </ol>
+        <!-- 内容 -->
+        <div class="lt_content">
+            <table class="table table-bordered">
+                <thead>
+                    <th width="10%">序号</th>
+                    <th width="20%">用户名</th>
+                    <th width="30%">手机号</th>
+                    <th width="20%">状态</th>
+                    <th width="20%">操作</th>
+                </thead>
+                <tbody id="user_table">
+                    <!-- 挖个坑 -->
+                </tbody>
+            </table>
+            <div class="text-right">
+                <ul id="pagintor"></ul>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -85,11 +107,51 @@
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+</div>
+
+<!-- 按钮提示模态框 -->
+<div class="modal fade" tabindex="-1" id="confirmModal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" ><span>&times;</span></button>
+                <h4 class="modal-title">温馨提示</h4>
+            </div>
+            <div class="modal-body">
+                <p class="red"><span class="glyphicon glyphicon-info-sign"></span>你确定要执行此操作吗？</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="btn_confirm">确定</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+
+
+<script type="text/html" id="userTpl">
+    {{each rows v i}}
+    <tr>
+        <td>{{i + 1}}</td>
+        <td>{{v.username}}</td>
+        <td>{{v.mobile}}</td>
+        <td>{{v.isDelete === 1 ? '正常' : '禁用'}}</td>
+        <td data-id="{{v.id}}">
+            {{ if v.isDelete === 1 }}
+            <button class="btn btn-danger" data-isDelete="0">禁用</button>
+            {{ else }}
+            <button class="btn btn-success" data-isDelete="1">启用</button>
+            {{ /if }}
+        </td>
+    </tr>
+    {{ /each }}
+</script>
 
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/user.js"></script>
