--- a/public/back/first.html
+++ b/public/back/first.html
@@ -64,9 +64,55 @@
 <!-- 主体内容 -->
 <div class="lt_main">
     <div class="container-fluid">
-        一级分类
+        <!-- 面包屑导航 -->
+        <ol class="breadcrumb">
+            <li><a href="#">管理系统</a></li>
+            <li><a href="#">分类管理</a></li>
+            <li class="active">一级分类</li>
+        </ol>
+        <!-- 内容 -->
+        <div class="lt_content">
+            <button class="btn btn-default mb_20" id="btn_add">添加分类</button>
+            <table class="table table-bordered">
+                <thead>
+                <th width="20%">序号</th>
+                <th width="80%">一级分类名</th>
+                </thead>
+                <tbody id="first_table">
+                <!-- 挖个坑 -->
+                </tbody>
+            </table>
+            <div class="text-right">
+                <ul id="pagintor"></ul>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!-- 添加分类模态框 -->
+<div class="modal fade" tabindex="-1" id="addModal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <form id="form">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" ><span>&times;</span></button>
+                    <h4 class="modal-title">添加分类</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="categoryName" placeholder="请输入一级分类">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary">添加</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
+
 
 <!-- 退出模态框 -->
 <div class="modal fade" tabindex="-1" id="logoutModal">
@@ -74,7 +120,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" ><span>&times;</span></button>
-                <h4 class="modal-title" id="gridSystemModalLabel">温馨提示</h4>
+                <h4 class="modal-title">温馨提示</h4>
             </div>
             <div class="modal-body">
                 <p class="red"><span class="glyphicon glyphicon-info-sign"></span>您确定要退出后台管理系统吗？</p>
@@ -85,11 +131,21 @@
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+</div>
 
+<script type="text/html" id="firstTpl">
+    {{each rows v i}}
+    <tr>
+        <td>{{ (page - 1) * size + i + 1 }}</td>
+        <td>{{v.categoryName}}</td>
+    </tr>
+    {{ /each }}
+</script>
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/first.js"></script>
