--- a/public/back/user.html
+++ b/public/back/user.html
@@ -132,7 +132,7 @@
 <script type="text/html" id="userTpl">
     {{each rows v i}}
     <tr>
-        <td>{{i + 1}}</td>
+        <td>{{(page - 1) * size + i + 1}}</td>
         <td>{{v.username}}</td>
         <td>{{v.mobile}}</td>
         <td>{{v.isDelete === 1 ? '正常' : '禁用'}}</td>
