分类页完成

--- a/public/front/category.html
+++ b/public/front/category.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="lib/mui/css/mui.css">
     <link rel="stylesheet" href="lib/fa/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/category.css">
 </head>
 <body>
 <div class="lt_container">
@@ -20,7 +21,16 @@
         <div class="h-title">乐淘云购</div>
     </div>
     <div class="lt_main">
-        分类页
+        <div class="lt_category_left">
+            <ul id="category_list">
+                <!--挖个坑-->
+            </ul>
+        </div>
+        <div class="lt_category_right">
+            <ul class="mui-clearfix" id="brands_list">
+                <!--挖个坑-->
+            </ul>
+        </div>
     </div>
     <div class="lt_footer">
         <ul class="mui-clearfix">
@@ -52,8 +62,34 @@
     </div>
 </div>
 </body>
-
+<script type="text/html" id="category_tpl">
+    {{ each rows v i }}
+    <li>
+        {{ if i === 0 }}
+        <a class="current" data-id="{{v.id}}" href="javascript:;">{{v.categoryName}}</a>
+        {{ else }}
+        <a data-id="{{v.id}}" href="javascript:;">{{v.categoryName}}</a>
+        {{ /if }}
+    </li>
+    {{ /each }}
+</script>
+<script type="text/html" id="brands_tpl">
+    {{ if total === 0 }}
+        <p>没有更多分类信息了</p>
+    {{ else }}
+    {{ each rows v i }}
+    <li>
+        <a href="#">
+            <img src="{{v.brandLogo}}" alt="">
+            <p>{{v.brandName}}</p>
+        </a>
+    </li>
+    {{ /each }}
+    {{ /if }}
+</script>
 <script src="lib/zepto/zepto.min.js"></script>
 <script src="lib/mui/js/mui.js"></script>
+<script src="lib/artTemplate/template-web.js"></script>
 <script src="js/common.js"></script>
+<script src="js/category.js"></script>
 </html>
