产品列表模块添加下拉刷新上拉加载功能，产品模块完成

--- a/public/front/searchList.html
+++ b/public/front/searchList.html
@@ -38,7 +38,7 @@
                 <div class="product-list">
                     <ul class="mui-clearfix">
                         <!-- 挖个坑 -->
-                        <div class="loading"></div>
+                        <!--<div class="loading"></div>-->
                     </ul>
                 </div>
             </div>
@@ -77,7 +77,7 @@
 <script type="text/html" id="product_tpl">
     {{ each data v i }}
     <li>
-        <a href="#">
+        <a href="product.html?id={{v.id}}" data-id="{{v.id}}">
             <img src="{{v.pic[0].picAddr}}" alt="">
             <p class="mui-text-left">{{v.proName}}</p>
             <p>
@@ -93,6 +93,6 @@
 <script src="lib/mui/js/mui.js"></script>
 <script src="lib/artTemplate/template-web.js"></script>
 <script src="js/common.js"></script>
-<script src="js/searchList.js"></script>
+<script src="js/searchList2.js"></script>
 
 </html>
