商品详情页, 登录页完成

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -39,6 +39,14 @@
                             <!--支持循环，需要重复图片节点-->
                             <div class="mui-slider-item"><a href="#"><img src="images/banner1.png" /></a></div>
                         </div>
+
+                        <!-- 小圆点 -->
+                        <div class="mui-slider-indicator">
+                            <div class="mui-indicator mui-active"></div>
+                            <div class="mui-indicator"></div>
+                            <div class="mui-indicator"></div>
+                            <div class="mui-indicator"></div>
+                        </div>
                     </div>
 
                     <!--导航部分-->
