--- a/public/front/product.html
+++ b/public/front/product.html
@@ -2,9 +2,108 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>商品详情</title>
+    <link rel="stylesheet" href="lib/mui/css/mui.css">
+    <link rel="stylesheet" href="lib/fa/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/product.css">
 </head>
 <body>
-    商品详情页
+<div class="lt_container">
+    <div class="lt_header">
+        <a href="javascript: history.back();" class="h-left">
+            <span class="mui-icon mui-icon-back"></span>
+        </a>
+        <a href="javascript: location.reload();" class="h-right">
+            <span class="mui-icon mui-icon-reload"></span>
+        </a>
+        <div class="h-title">商品详情</div>
+    </div>
+    <div class="lt_main">
+        <div class="mui-scroll-wrapper">
+            <div class="mui-scroll">
+                <!--这里放置真实显示的DOM内容-->
+
+                <!--挖个大坑-->
+
+            </div>
+        </div>
+    </div>
+    <div class="lt_go_cart">
+        <a href="cart.html" class="pull-left">
+            前往购物车
+        </a>
+        <div class="pull-right">
+            <button class="mui-btn mui-btn-danger" id="btn_add_cart">加入购物车</button>
+            <button class="mui-btn mui-btn-warning">买买买</button>
+        </div>
+    </div>
+</div>
 </body>
+
+<script type="text/html" id="banner_tpl">
+    <!--轮播图-->
+    <div class="mui-slider">
+        <div class="mui-slider-group mui-slider-loop">
+            <!--支持循环，需要重复图片节点-->
+            <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="{{pic[pic.length - 1].picAddr}}" /></a></div>
+            {{ each pic v i}}
+            <div class="mui-slider-item"><a href="#"><img src="{{v.picAddr}}" /></a></div>
+            {{ /each }}
+            <!--支持循环，需要重复图片节点-->
+            <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="{{pic[0].picAddr}}" /></a></div>
+        </div>
+
+        <div class="mui-slider-indicator">
+            {{ each pic v i }}
+                {{ if i == 0 }}
+                    <div class="mui-indicator mui-active"></div>
+                {{ else }}
+                    <div class="mui-indicator"></div>
+                {{ /if }}
+            {{ /each }}
+        </div>
+    </div>
+    <!--内容部分-->
+    <div class="lt_product_content">
+        <div class="lt_item_box lt_pro_name">
+            <strong>{{proName}}</strong>
+        </div>
+        <div class="lt_item_box lt_pro_price">
+            价格:
+            <span>￥{{price}}</span>
+            <del>￥{{oldPrice}}</del>
+        </div>
+        <div class="lt_item_box lt_pro_size">
+            尺码:
+            <%
+                var arr = size.split('-')
+                for (var i = +arr[0]; i < +arr[1] + 1; i++) {
+            %>
+                    <span>{{i}}</span>
+                <%}%>
+        </div>
+        <div class="lt_item_box lt_pro_num">
+            数量:
+            <div class="mui-numbox" data-numbox-step="1" data-numbox-min="1" data-numbox-max="{{num}}">
+                <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
+                <input class="mui-numbox-input" type="number"/>
+                <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
+            </div>
+            <span class="last">
+                剩余数量: {{num}}双
+            </span>
+        </div>
+        <div class="lt_item_box lt_pro_detail">
+            {{proDesc}}
+        </div>
+    </div>
+</script>
+
+<script src="lib/zepto/zepto.min.js"></script>
+<script src="lib/artTemplate/template-web.js"></script>
+<script src="lib/mui/js/mui.js"></script>
+<script src="js/common.js"></script>
+<script src="js/product.js"></script>
 </html>
