--- a/public/front/user.html
+++ b/public/front/user.html
@@ -7,20 +7,46 @@
     <link rel="stylesheet" href="lib/mui/css/mui.css">
     <link rel="stylesheet" href="lib/fa/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/user.css">
 </head>
 <body>
 <div class="lt_container">
     <div class="lt_header">
-        <a href="index.html" class="h-left">
-            <span class="fa fa-home"></span>
+        <a href="javascript: history.back()" class="h-left">
+            <span class="mui-icon mui-icon-back"></span>
         </a>
-        <a href="search.html" class="h-right">
-            <span class="fa fa-search"></span>
-        </a>
-        <div class="h-title">乐淘云购</div>
+        <div class="h-title">会员中心</div>
     </div>
     <div class="lt_main">
-        用户页
+        <ul class="mui-table-view">
+            <li class="mui-table-view-cell mui-media" id="userInfo">
+                <!-- 挖个坑 -->
+            </li>
+            <li class="mui-table-view-cell mui-media">
+                <a href="javascript:;">
+                    <div class="mui-media-body">
+                        账号与安全
+                    </div>
+                </a>
+            </li>
+            <li class="mui-table-view-cell mui-media">
+                <a href="javascript:;">
+                    <div class="mui-media-body">
+                        我的购物车
+                    </div>
+                </a>
+            </li>
+            <li class="mui-table-view-cell mui-media">
+                <a href="javascript:;">
+                    <div class="mui-media-body">
+                        收获地址管理
+                    </div>
+                </a>
+            </li>
+        </ul>
+        <div class="btnWrapper">
+            <button class="mui-btn mui-btn-block" id="btn_logout">退出</button>
+        </div>
     </div>
     <div class="lt_footer">
         <ul class="mui-clearfix">
@@ -52,9 +78,19 @@
     </div>
 </div>
 </body>
-
+<script type="text/html" id="userInfo_tpl">
+    <a href="javascript:;">
+        <img class="mui-media-object mui-pull-left" src="images/user.jpg">
+        <div class="mui-media-body">
+            {{username}}
+            <p class='mui-ellipsis'>绑定手机: {{mobile}}</p>
+        </div>
+    </a>
+</script>
 <script src="lib/zepto/zepto.min.js"></script>
 <script src="lib/mui/js/mui.js"></script>
+<script src="lib/artTemplate/template-web.js"></script>
 <script src="js/common.js"></script>
+<script src="js/user.js"></script>
 
 </html>
